[package]
name = "auths-index"
version.workspace = true
edition = "2024"
description = "SQLite-backed index for O(1) attestation lookups"
repository = "https://github.com/bordumb/auths"
readme = "README.md"
keywords = ["sqlite", "index", "attestation", "database"]
categories = ["database"]
publish = false

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20.4"

[dev-dependencies]
tempfile = "3"
