[package]
name = "auths-index"
version.workspace = true
edition = "2024"
description = "SQLite-backed index for O(1) attestation lookups"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["sqlite", "index", "attestation", "database"]
categories = ["database"]
publish = true
license.workspace = true

[dependencies]
auths-keri.workspace = true
auths-verifier.workspace = true
sqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
