[package]
name = "auths-infra-git"
description = "Git client adapter for Auths - enables communication with Auths services over Git"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true
keywords = ["git", "infrastructure", "storage", "adapter"]
categories = ["development-tools"]

[dependencies]
auths-core = { workspace = true }
auths-sdk = { workspace = true }
auths-verifier = { workspace = true, features = ["native"] }
git2 = "0.20.4"
thiserror.workspace = true
chrono = "0.4"
log = "0.4"

[features]
test-utils = ["dep:tempfile"]

[dependencies.tempfile]
version = "3"
optional = true

[dev-dependencies]
auths-sdk = { workspace = true, features = ["test-utils"] }
