[package]
name = "auths-infra-git"
description = "Git client adapter for Auths - enables communication with Auths services over Git"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true
keywords = ["git", "infrastructure", "storage", "adapter"]
categories = ["development-tools"]
repository.workspace = true
homepage.workspace = true

[dependencies]
auths-core = { workspace = true }
auths-sdk = { workspace = true }
auths-verifier = { workspace = true, features = ["native"] }
capsec.workspace = true
git2.workspace = true
thiserror.workspace = true
chrono = "0.4"
log = "0.4"

[dev-dependencies]
auths-sdk = { workspace = true, features = ["test-utils"] }
auths-test-utils = { path = "../auths-test-utils" }
capsec.workspace = true
tempfile = "3"

[lints]
workspace = true
