[package]
name = "auths-infra-http"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true

[dependencies]
async-trait = "0.1"
auths-core = { workspace = true }
auths-verifier = { workspace = true, features = ["native"] }
reqwest = { version = "0.13.2", features = ["json"] }
thiserror.workspace = true
tokio.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
auths-core = { workspace = true, features = ["witness-server"] }
auths-test-utils.workspace = true
axum = "0.8"
hex = "0.4"
ring.workspace = true
serde_json = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }

[features]
witness-server = ["auths-core/witness-server"]
