[package]
name = "auths-infra-http"
description = "HTTP client adapter for Auths - enables communication with Auths services over HTTP"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true
keywords = ["http", "infrastructure", "client", "adapter"]
categories = ["web-programming::http-client"]
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
auths-core = { workspace = true }
auths-crypto = { workspace = true }
auths-oidc-port = { path = "../auths-oidc-port", version = "0.0.1-rc.9" }
auths-verifier = { workspace = true, features = ["native"] }
futures-util = "0.3"
jsonwebtoken = { version = "9.3", features = ["use_pem"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
parking_lot.workspace = true
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
urlencoding = "2"
zeroize = { workspace = true }

[dev-dependencies]
auths-core = { workspace = true, features = ["witness-server"] }
axum = "0.8"
hex = "0.4"
ring.workspace = true
serde_json = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }

[features]
witness-server = ["auths-core/witness-server"]

[lints]
workspace = true
