[package]
name = "auths-infra-rekor"
version.workspace = true
edition = "2024"
authors = ["bordumb <bordumbb@gmail.com>"]
description = "Rekor transparency log adapter for Auths"
publish = false
license.workspace = true
repository.workspace = true

[dependencies]
auths-core = { workspace = true }
auths-transparency = { workspace = true }
auths-verifier = { workspace = true, features = ["native"] }
auths-crypto = { workspace = true }
async-trait = "0.1"
base64.workspace = true
hex = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
sha2.workspace = true
thiserror.workspace = true
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
auths-sdk = { workspace = true }
http = "1"
tokio = { version = "1", features = ["full"] }
ring.workspace = true
