[package]
name = "auths-keri"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true
description = "KERI protocol types, SAID computation, and validation"
keywords = ["keri", "cesr", "identity", "cryptography"]
categories = ["cryptography", "encoding"]
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
auths-crypto.workspace = true
base64.workspace = true
blake3 = "=1.8.4"
cesride = "0.6"
hex = { version = "0.4.3", features = ["serde"] }
ring.workspace = true
# P-256 verification for KERI events. Uses compressed SEC1 keys (33 bytes).
p256 = { version = "=0.13.2", features = ["ecdsa"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
schemars = { workspace = true, optional = true }
subtle.workspace = true
thiserror.workspace = true
# KEL-rooted X.509 leaf certificates (the `tls-cert` feature). rcgen mints the
# leaf, x509-parser reads it back, yasna wraps the binding extension value, and
# zeroize protects the ephemeral TLS key. All off by default — the core KERI
# types carry no TLS-stack dependency.
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "aws_lc_rs", "x509-parser"], optional = true }
x509-parser = { version = "0.18", optional = true }
yasna = { version = "0.5", optional = true }
zeroize = { workspace = true, optional = true }
# QUIC/HTTP3 transport (the `quic` feature): carries the KEL-rooted leaf + the
# RFC 9266 exporter channel binding over QUIC's TLS 1.3 handshake. quinn brings
# its own rustls (aws-lc-rs) TLS 1.3 stack, the same provider the rest of auths
# uses. Off by default — the core KERI types carry no QUIC dependency.
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio"], optional = true }
# The QUIC loopback driver awaits the server-accept and client-connect halves of
# one handshake concurrently (`tokio::try_join!`); quinn's runtime is tokio.
tokio = { workspace = true, optional = true }

[features]
default = []
# Pass-through to auths-crypto's FIPS 140-3 build (AWS-LC-FIPS). No local
# re-implementation — every ed25519/p256/aead/kdf call goes through the
# provider trait, so flipping this feature cascades automatically.
fips = ["auths-crypto/fips"]
cnsa = ["auths-crypto/cnsa"]
cesr = []
schema = ["dep:schemars"]
seal-extensions = []
# KEL-rooted X.509 leaf certificates: an X.509 leaf whose trust roots in a KEL
# (did:keri SAN + binding extension), issued/verified against a replayed
# key-state. Pulls in rcgen/x509-parser; the core crate stays TLS-free without it.
tls-cert = ["dep:rcgen", "dep:x509-parser", "dep:yasna", "dep:zeroize"]
# QUIC/HTTP3 transport for the KEL-rooted TLS composition: the same leaf + the
# RFC 9266 exporter channel binding, carried over QUIC's TLS 1.3 handshake.
# Builds on `tls-cert` (the leaf it serves) and pulls in quinn's TLS 1.3 stack.
quic = ["tls-cert", "dep:quinn", "dep:tokio"]

[dev-dependencies]
proptest = "1.4"
tokio = { workspace = true }

[lints]
workspace = true
