[package]
name = "auths-mcp-gateway"
version.workspace = true
edition = "2024"
rust-version = "1.93"
authors = ["Auths Contributors"]
description = "The bounded-agent MCP gateway: a real-MCP (rmcp) proxy that brokers each tools/call through auths-mcp-core's per-call gate, forwarding only on pass and emitting a signed receipt. Carries the `wrap` subcommand."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["identity", "mcp", "agent", "gateway", "proxy"]
categories = ["authentication", "command-line-utilities"]

[[bin]]
name = "auths-mcp-gateway"
path = "src/main.rs"

[dependencies]
auths-mcp-core = { path = "../auths-mcp-core", version = "0.1.3" }
# The gateway resolves the agent + delegator KELs from the sandbox registry so the
# native per-call gate can authenticate each signed call (no shelling on the
# enforcement path — D2).
auths-sdk = { workspace = true, features = ["backend-git"] }

# Real MCP transport (PRD §5 Build item 2 / D1): the official Rust MCP SDK. The
# `wrap` proxy speaks MCP JSON-RPC up to the agent (server) and down to the wrapped
# downstream server spawned over stdio (child-process client).
rmcp = { version = "0.9", features = [
    "server",
    "client",
    "transport-io",
    "transport-child-process",
] }

clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[lints]
workspace = true
