[package]
name = "auths-mcp-gateway"
version.workspace = true
edition = "2024"
rust-version = "1.93"
authors = ["Auths Contributors"]
description = "The bounded-agent MCP gateway: a real-MCP (rmcp) proxy that brokers each tools/call through auths-mcp-core's per-call gate, forwarding only on pass and emitting a signed receipt. Carries the `wrap` subcommand."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["identity", "mcp", "agent", "gateway", "proxy"]
categories = ["authentication", "command-line-utilities"]

[[bin]]
name = "auths-mcp-gateway"
path = "src/main.rs"

[dependencies]
auths-mcp-core = { path = "../auths-mcp-core", version = "0.1.9" }
# The single spend re-derivation + the activity/v1 attestation live in the shared
# evidence crate; the CLI is a thin caller (one implementation, no divergence).
auths-evidence = { workspace = true }
# The gateway resolves the agent + delegator KELs from the sandbox registry so the
# native per-call gate can authenticate each signed call (no shelling on the
# enforcement path — D2).
auths-sdk = { workspace = true, features = ["backend-git"] }
# The treasury coordinator signs its {fleet, count, cumulative} checkpoints with a
# P-256 key and verify-spend re-verifies them — same primitives as the rest of the stack.
auths-crypto = { workspace = true }

# Real MCP transport (PRD §5 Build item 2 / D1): the official Rust MCP SDK. The
# `wrap` proxy speaks MCP JSON-RPC up to the agent (server) and down to the wrapped
# downstream server spawned over stdio (child-process client).
rmcp = { version = "0.9", features = [
    "server",
    "client",
    "transport-io",
    "transport-child-process",
] }

clap = { version = "4", features = ["derive", "env"] }
base64.workspace = true
# In-process per-call signing builds git objects directly; repos are SHA-1.
sha1 = "0.10"
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
# Payment-path observability (#7): Prometheus metrics behind an opt-in /metrics endpoint.
auths-telemetry = { workspace = true }
metrics = "0.24"

[dev-dependencies]
# The wrap↔gate cross-rail budget parity test drives the durable verifier-held
# CrossRailBudget over a throwaway ledger dir (same as the core engine's own tests).
tempfile = "3"

[lints]
workspace = true
