[package]
name = "auths-mobile-ffi"
version.workspace = true
edition = "2024"
description = "UniFFI bindings for Auths mobile identity creation (iOS/Android)"
publish = true
license.workspace = true

# Exclude from main workspace - built separately with UniFFI
[workspace]

[lib]
name = "auths_mobile_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# UniFFI for Swift/Kotlin bindings (cli feature for bindgen)
uniffi = { version = "0.28", features = ["cli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-canon = "0.1"
hex = "0.4.3"
base64 = "0.22.1"

# Cryptography
ring = "0.17.14"
blake3 = "1.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.10.0"
zeroize = "1.8"

# Error handling
thiserror = "2.0"

# Base58 encoding for did:key
bs58 = "0.5.1"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
